--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /bin/Debug/netcoreapp2.1
+/obj/Debug/netcoreapp2.1
+/obj/Release/netcoreapp2.1
