Cambio de Label Controller

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/InventarioMVC/config
+/bin/Debug/netcoreapp2.1
+/obj/Debug/netcoreapp2.1
+/obj/Release/netcoreapp2.1
+/Properties/PublishProfiles
