--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,6 @@ install:
 
 script:
  - dotnet build
-  
 
-
- deploy:
-  provider: azure_web_apps
-  skip_cleanup: true
-  verbose: true
+deploy:
+ - provider: azure_web_apps
