--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ install:
 
 script:
  - dotnet build
-
+  
 deploy:
- - provider: azure_web_apps
- on:
-  tags: true
-  all_branches: true
+        - provider: azure_web_apps
+          skip_cleanup: true
+          on:
+            all_branches: true
